--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -20,8 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Execute it as a markdown cell\n",
-    "# H1: Data Science Tools and Ecosystem"
+    "# Data Science Tools and Ecosystem"
    ]
   },
   {
@@ -30,8 +29,6 @@
     "tags": []
    },
    "source": [
-    "#Execute it as a markdown cell\n",
-    "\n",
     "In this notebook, Data Science Tools and Ecosystem are summarized."
    ]
   },
@@ -39,70 +36,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Execute it as a markdown cell\n",
-    "\n",
     "Some of the popular languages that Data Scientists use are:\n",
-    "1. First item \n",
-    "2. Second item \n",
-    "3. Third item \n",
-    "4. Fourth item"
+    "1. Pyton\n",
+    "2. R \n",
+    "3. SQL \n",
+    "4. Java"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Execute it as a markdown cell\n",
-    "\n",
     "Some of the commonly used libraries used by Data Scientists include:\n",
     "\n",
-    "- First item using dashes\n",
-    "- Second item using dashes\n",
-    "- Third item using dashes\n",
-    "- Fourth item using dashes"
+    "- Pandas\n",
+    "- Numpy\n",
+    "- Matplotlib\n",
+    "- Seaborn"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Execute it as a markdown cell\n",
-    "\n",
     "| Data Science Tools |\n",
     "| ------------------ |\n",
     "| Jupiter Notebooks |\n",
     "| RStudio |\n",
-    "| Spyder | "
+    "| Spyder | \n",
+    "| Anaconda |"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Execute it as a markdown cell\n",
-    "\n",
-    "### H3: Below are a few examples of evaluating arithmetic expressions in Python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17\n"
-     ]
-    }
-   ],
-   "source": [
-    "# This is a simple arithmetic expression to multiply then add integers.\n",
-    "result = (3 * 4) + 5\n",
-    "print(result)"
+    "### Below are a few examples of evaluating arithmetic expressions in Python"
    ]
   },
   {
@@ -116,12 +85,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "#This is a simple arithmetic expression to multiply then add integers\n",
+    "result = (3 * 4) + 5\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "3.3333333333333335\n"
      ]
     }
    ],
    "source": [
-    "#  This will convert 200 minutes to hours by diving by 60\n",
+    "#This will convert 200 minutes to hours by diving by 60\n",
     "hours = 200 / 60\n",
     "print (hours)"
    ]
@@ -130,24 +120,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Execute it as a markdown cell\n",
-    "\n",
     "In this notebook, Data Science Tools and Ecosystem are summarized.\n",
     "\n",
     "**Objectives:**\n",
-    "- Python\n",
-    "- R \n",
-    "- SQL \n",
-    "- Julia "
+    "- Add comments to code cells\n",
+    "- Create markdown cells \n",
+    "- Add ordered and unordered lists to markdown cells\n",
+    "- Format content of markdown cells with heading styles  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Execute it as a markdown cell\n",
-    "\n",
-    "## H2: AUTHOR\n",
+    "## AUTHOR\n",
     "\n",
     "Wilda Mudamawatun Nisa\n"
    ]
